<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">
    <TextView
        android:id="@+id/tex_header_new_lote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/text_new_lote"
        android:textColor="@color/primary_dark"/>
    <TextView
        android:id="@+id/divider_text_new_lote"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tex_header_new_lote"
        android:layout_margin="10dp"
        android:background="@color/divider"/>

    <EditText
        android:id="@+id/text_value_lote"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/action_text_new_lote"
        android:gravity="center"
        android:layout_marginTop="40dp"/>

    <Button
        android:id="@+id/new_lote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_value_lote"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:theme="@style/Theme.AppCompat.Light"
        android:background="@color/accent"
        android:textColor="@color/primary_text"
        android:text="@string/save"/>

</RelativeLayout>