<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="4dp"
    app:cardCornerRadius="5dp"
    app:contentPadding="5dp"
    app:cardUseCompatPadding="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_lotes"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"/>
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@color/divider"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            >
            <TextView
                android:id="@+id/code_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code_text"
                android:layout_marginBottom="1dp"/>
            <TextView
                android:id="@+id/text_data_code"
                android:layout_below="@+id/code_text"
                android:layout_width="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/primary_dark"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/text_create_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_lote"
                android:layout_below="@+id/text_data_code"/>
            <TextView
                android:id="@+id/date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_create_at"
                android:text="@string/date_text"
                />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_add"
                android:background="@android:color/transparent"
             />
        </RelativeLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>