<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">
    <TextView
        android:id="@+id/tex_header_new_lote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/text_new_corrar"
        android:textColor="@color/primary_dark"/>
    <TextView
        android:id="@+id/divider_text_new_corral"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tex_header_new_lote"
        android:layout_margin="10dp"
        android:background="@color/divider"/>
    <LinearLayout
        android:id="@+id/content_datacorral"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider_text_new_corral"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/code_galpon"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:entries="@array/array_galpones"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/text_value_corral"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/action_text_new_lote"

            android:gravity="center"
            />

    </LinearLayout>



    <Button
        android:id="@+id/new_corral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content_datacorral"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:theme="@style/Theme.AppCompat.Light"
        android:background="@color/accent"
        android:textColor="@color/primary_text"
        android:text="@string/save"/>

</RelativeLayout>