<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp"
    app:cardCornerRadius="5dp"
    app:contentPadding="5dp"
    app:cardUseCompatPadding="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_corrales"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"/>
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@color/divider"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            >

            <TextView
                android:id="@+id/text_code_galpon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_code_galpon"
                android:layout_below="@+id/text_data_code"/>
            <TextView
                android:id="@+id/code_galpon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_code_galpon"
                android:textColor="@color/primary_dark"
                android:text="@string/app_name"
                />
            <TextView
                android:id="@+id/text_create_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/code_galpon"
                android:text="@string/create_lote"
                android:padding="2dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/date_text_galpon"
                android:layout_below="@+id/text_create_at"
                android:textColor="@color/primary_dark"
                android:text="@string/date_text"/>

            <TextView
                android:id="@+id/text_code_corral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date_text_galpon"
                android:text="@string/text_desc_corrals"
                android:padding="2dp"/>
            <TextView
                android:id="@+id/code_corral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_code_corral"
                android:textColor="@color/primary_dark"
                android:text="@string/app_name"
                android:padding="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/code_corral"
                android:text="AGE"
                android:id="@+id/tex_age"
                android:padding="2dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tex_age"
                android:text="2"
                android:id="@+id/age_galpon"
                android:textColor="@color/primary_dark"
                android:paddingBottom="5dp"
                />

            <ImageButton
                android:id="@+id/add_pesaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_centerHorizontal="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_add"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:background="@android:color/transparent"
                />


            <ImageButton
                android:layout_below="@+id/add_pesaje"
                android:id="@+id/view_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_view"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent"
                android:padding="10dp"
                />

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>